[package]
name = "announcenet"
version = "0.1.0"
authors = ["Kacper Wardega"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
petgraph = "0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
rayon = "1.5"
itertools = "0.9.0"
indicatif = { version = "0.15.0", features = ["rayon"] }
defaultmap = "0.5.0"
plotters = "0.3.0"
decorum = "0.3.1"
matrix_display = "1.0.0"
